changed the modal size and added save and cancel buttons

--- a/Services.html
+++ b/Services.html
@@ -62,7 +62,7 @@
           			</fieldset>
         			</div>
         			<div class="modal-footer">
-        				<fieldset id="save_cancel">
+        				<fieldset id="save_cancel"> <!--buttons in the modal-->
           				<button class="squareButton" type="submit">Cancel</button>
           				<button class="squareButton" id="savebtn" type="submit">Save</button>
 								</fieldset>
@@ -147,6 +147,7 @@
 				document.req.email.style.borderBottom= "1px solid black";
 				document.req.email.style.backgroundColor="#FFFFFF";
 			}*/
+
 
 		}
 
